Prevent page content wrapping by forcing the category items to wrap

--- a/_sass/_blog.scss
+++ b/_sass/_blog.scss
@@ -145,6 +145,7 @@
 .post-preview-categories {
   display: flex;
   gap: 8px;
+  flex-wrap: wrap;
 }
 
 .category {
